--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,9 @@
 [project]
-name = "pio"
+name = "pio-concurrent"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-authors = [
-    { name = "Tomperez98", email = "tomasperezalvarez@gmail.com" }
-]
+authors = [{ name = "Tomperez98", email = "tomasperezalvarez@gmail.com" }]
 requires-python = ">=3.13"
 dependencies = []
 
@@ -14,7 +12,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = [
-    "pyright>=1.1.403",
-    "ruff>=0.12.7",
-]
+dev = ["pyright>=1.1.403", "ruff>=0.12.7"]
