--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,9 @@ dependencies = []
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/pio"]
+
+
 [dependency-groups]
 dev = ["pyright>=1.1.403", "ruff>=0.12.7"]
