--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,12 @@ packages = ["src/pio"]
 
 
 [dependency-groups]
-dev = ["pyright>=1.1.403", "ruff>=0.12.7"]
+dev = [
+    "pyright>=1.1.403",
+    "pytest>=8.4.1",
+    "ruff>=0.12.7",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = ["--import-mode=importlib"]
